Fix deprecation warnings with Java 11